--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "typo3/cms-extbase": "^8.7.0 || ^9.3.0",
         "typo3/cms-extensionmanager": "^8.7.0 || ^9.3.0",
         "typo3/cms-fluid": "^8.7.0 || ^9.3.0",
-        "typo3/cms-frontend": "^8.7.0 || ^9.3.0"
+        "typo3/cms-frontend": "^8.7.0 || ^9.3.0",
+        "auth0/auth0-php": "^5.2"
     },
     "autoload": {
         "psr-4": {
