--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Auth0 is the solution you need for web, mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.",
   "keywords": [
     "TYPO3",
-    "auth0",
+    "Auth0",
     "SSO",
     "Login",
     "User"
@@ -26,14 +26,14 @@
   ],
   "require": {
     "php": ">=7.0.0 <7.3",
-    "typo3/cms-core": "^8.7.0 || ^9.3.0",
-    "typo3/cms-backend": "^8.7.0 || ^9.3.0",
-    "typo3/cms-extbase": "^8.7.0 || ^9.3.0",
-    "typo3/cms-extensionmanager": "^8.7.0 || ^9.3.0",
-    "typo3/cms-fluid": "^8.7.0 || ^9.3.0",
-    "typo3/cms-frontend": "^8.7.0 || ^9.3.0",
-    "typo3/cms-saltedpasswords": "^8.7.0 || ^9.3.0",
-    "auth0/auth0-php": "^5.3"
+    "typo3/cms-core": "^8.7.0",
+    "typo3/cms-backend": "^8.7.0",
+    "typo3/cms-extbase": "^8.7.0",
+    "typo3/cms-extensionmanager": "^8.7.0",
+    "typo3/cms-fluid": "^8.7.0",
+    "typo3/cms-frontend": "^8.7.0",
+    "typo3/cms-saltedpasswords": "^8.7.0",
+    "auth0/auth0-php": "^5.3.2"
   },
   "suggest": {
     "typo3/cms-scheduler": "TYPO3 Scheduler"
