[TASK] Add autoload-dev information

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,11 @@
       "Bitmotion\\Auth0\\": "Classes/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Bitmotion\\Auth0\\Tests\\": "Tests/"
+    }
+  },
   "replace": {
     "auth0": "self.version",
     "typo3-ter/auth0": "self.version"
