--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "typo3/cms-scheduler": "TYPO3 Scheduler"
   },
   "replace": {
-    "auth0": "self.version",
+    "bitmotion/auth0": "self.version",
     "typo3-ter/auth0": "self.version"
   },
   "autoload": {
