[WIP] Preparations for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+php:
+  - 7.2
+  - 7.3
+
 env:
   global:
     - TYPO3_DATABASE_NAME = "typo3"
@@ -12,10 +16,6 @@ env:
     - TYPO3_VERSION = "9.5.x-dev"
     - TYPO3_VERSION = "dev-master"
 
-php:
-  - 7.2
-  - 7.3
-
 matrix:
   fast_finish: true
   allow_failures:
@@ -24,16 +24,23 @@ matrix:
 
 before_install:
   - sudo apt-get install -y parallel
-  - composer req typo3/cms-core=$TYPO3_VERSION
-  - composer req typo3/cms-backend=$TYPO3_VERSION
-  - composer req typo3/cms-extbase=$TYPO3_VERSION
-  - composer req typo3/cms-extensionmanager=$TYPO3_VERSION
-  - composer req typo3/cms-fluid=$TYPO3_VERSION
-  - composer req typo3/cms-frontend=$TYPO3_VERSION
-  - composer req typo3/cms-saltedpasswords=$TYPO3_VERSION
+
+install:
+  - >
+    echo "Using TYPO3 Version: $TYPO3_VERSION"
+    echo "Using PHP-CS Fixer Version: $PHP_CS_FIXER_VERSION"
+    echo "Using database host: $TYPO3_DATABASE_HOST"
+    echo "Using database dbname: $TYPO3_DATABASE_NAME"
+    echo "Using database user: $TYPO3_DATABASE_USERNAME"
+  - composer req typo3/cms-core:${TYPO3_VERSION}
+  - composer req typo3/cms-backend:${TYPO3_VERSION}
+  - composer req typo3/cms-extbase:${TYPO3_VERSION}
+  - composer req typo3/cms-extensionmanager:${TYPO3_VERSION}
+  - composer req typo3/cms-fluid:${TYPO3_VERSION}
+  - composer req typo3/cms-frontend:${TYPO3_VERSION}
+  - composer req typo3/cms-saltedpasswords:${TYPO3_VERSION}
 
 before_script:
-  - phpenv config-rm xdebug.ini
   - export TYPO3_PATH_WEB=$PWD/.Build/web
 
 cache:
