--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ cache:
   directories:
     - "$HOME/.composer/cache"
 
-before_install: true
+before_install:
+  - chmod +x build.sh
+  - sudo apt-get install -y parallel
 
 install: Build/install.sh
 
