--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,12 @@
   },
   "require": {
     "php": ">=7.2.0 <7.4",
-    "typo3/cms-core": "^9.5.0",
-    "typo3/cms-backend": "^9.5.0",
-    "typo3/cms-extbase": "^9.5.0",
-    "typo3/cms-extensionmanager": "^9.5.0",
-    "typo3/cms-fluid": "^9.5.0",
-    "typo3/cms-frontend": "^9.5.0",
-    "typo3/cms-saltedpasswords": "^9.5.0",
+    "typo3/cms-core": "^9.5 || ^10.1",
+    "typo3/cms-backend": "^9.5 || ^10.1",
+    "typo3/cms-extbase": "^9.5 || ^10.1",
+    "typo3/cms-extensionmanager": "^9.5 || ^10.1",
+    "typo3/cms-fluid": "^9.5 || ^10.1",
+    "typo3/cms-frontend": "^9.5 || ^10.1",
     "auth0/auth0-php": "^5.3.2",
     "symfony/serializer": "^4.2",
     "symfony/property-access": "^4.2",
