--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "typo3/testing-framework": "^4.0"
+    "typo3/testing-framework": "^4.0 || ^5.0"
   },
   "suggest": {
     "typo3/cms-scheduler": "TYPO3 Scheduler"
