--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,6 +3,8 @@ return PhpCsFixer\Config::create()
     ->setRiskyAllowed(true)
     ->setRules([
         '@PSR2' => true,
+        '@PHP70Migration:risky' => true,
+        '@PHP71Migration:risky' => true,
         'array_syntax' => [
             'syntax' => 'short',
         ],
