--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,17 @@
     "email": "typo3-ext@bitmotion.de"
   },
   "require": {
-    "typo3/cms-core": "^9.5 || ^10.1",
-    "typo3/cms-backend": "^9.5 || ^10.1",
-    "typo3/cms-extbase": "^9.5 || ^10.1",
-    "typo3/cms-extensionmanager": "^9.5 || ^10.1",
-    "typo3/cms-fluid": "^9.5 || ^10.1",
-    "typo3/cms-frontend": "^9.5 || ^10.1",
-    "auth0/auth0-php": "^5.3.2",
-    "symfony/serializer": "^4.2",
-    "symfony/property-access": "^4.2",
-    "symfony/property-info": "^4.2",
-    "symfony/http-foundation": "^4.2",
+    "typo3/cms-core": "^9.5 || ^10.2",
+    "typo3/cms-backend": "^9.5 || ^10.2",
+    "typo3/cms-extbase": "^9.5 || ^10.2",
+    "typo3/cms-extensionmanager": "^9.5 || ^10.2",
+    "typo3/cms-fluid": "^9.5 || ^10.2",
+    "typo3/cms-frontend": "^9.5 || ^10.2",
+    "auth0/auth0-php": "^7.0",
+    "symfony/serializer": "^4.2 || ^5.0",
+    "symfony/property-access": "^4.2 || ^5.0",
+    "symfony/property-info": "^4.2 || ^5.0",
+    "symfony/http-foundation": "^4.2 || ^5.0",
     "ext-pdo": "*",
     "ext-json": "*"
   },
