--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
+/.git/ export-ignore
 /.github/ export-ignore
 /Build/ export-ignore
+/Documentation/ export-ignore
 /Tests/ export-ignore
 /.gitattributes export-ignore
-/.php_cs.dist export-ignore
+/.gitignore export-ignore
+/.php_cs export-ignore
 /.travis.yml export-ignore
