--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,32 @@
 language: php
+os: linux
 
 php:
   - 7.2
   - 7.3
+  - 7.4
+
+services:
+  - mysql
 
 env:
   global:
-    - TYPO3_DATABASE_NAME="auth0"
-    - TYPO3_DATABASE_HOST="127.0.0.1"
-    - TYPO3_DATABASE_USERNAME="root"
-    - TYPO3_DATABASE_PASSWORD=""
-    - PHP_CS_FIXER_VERSION="2.16.1"
+  - TYPO3_DATABASE_NAME="auth0"
+  - TYPO3_DATABASE_HOST="127.0.0.1"
+  - TYPO3_DATABASE_USERNAME="root"
+  - TYPO3_DATABASE_PASSWORD=""
+  - PHP_CS_FIXER_VERSION="2.16.1"
   matrix:
-    - TYPO3_VERSION="^9.5"
-    - TYPO3_VERSION="9.5.x-dev"
-    - TYPO3_VERSION="dev-master"
+  - TYPO3_VERSION="^9.5"
+  - TYPO3_VERSION="^10.2"
+  - TYPO3_VERSION="9.5.x-dev"
+  - TYPO3_VERSION="dev-master"
 
-matrix:
+jobs:
   fast_finish: true
   allow_failures:
-    - env: TYPO3_VERSION = "dev-master"
-    - env: TYPO3_VERSION = "9.5.x-dev"
+    - env: TYPO3_VERSION="dev-master"
+    - env: TYPO3_VERSION="9.5.x-dev"
 
 cache:
   directories:
@@ -30,7 +36,8 @@ before_install:
   - sudo chmod +x Build/*.sh
   - sudo apt-get install -y parallel
 
-install: Build/install.sh
+install:
+  - Build/install.sh
 
 before_script:
   - export TYPO3_PATH_WEB=$PWD/.Build/web
