[TASK] Exclude tests for TYPO3 9 and PHP 7.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ env:
   - TYPO3_VERSION="dev-master"
 
 jobs:
+  exclude:
+    - php: 7.4
+      env: TYPO3_VERSION="^9.5"
+    - php: 7.4
+      env: TYPO3_VERSION="9.5.x-dev"
   fast_finish: true
   allow_failures:
     - env: TYPO3_VERSION="dev-master"
