--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitmotion/auth0",
+  "name": "leuchtfeuer/auth0",
   "description": "Auth0 is the solution you need for web, mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.",
   "keywords": [
     "TYPO3",
