--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,7 +3,7 @@ project     = Auth0 for TYPO3
 release     = 3.3.0
 copyright   = since 2018 by the authors
 
-t3author    = Leuchtfeuer Digital Marketing, Florian Wessels
+t3author    = Florian Wessels, Leuchtfeuer Digital Marketing
 description = This extension allows you to log into a TYPO3 backend or frontend via Auth0. Auth0 is the solution you need for web,
               mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.
 
