--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
     "docs": "https://docs.typo3.org/p/leuchtfeuer/auth0/master/en-us/"
   },
   "require": {
-    "typo3/cms-core": "^9.5.20 || ^10.4.6",
-    "typo3/cms-backend": "^9.5.20 || ^10.4.6",
-    "typo3/cms-extbase": "^9.5.20 || ^10.4.6",
-    "typo3/cms-extensionmanager": "^9.5.20 || ^10.4.6",
-    "typo3/cms-fluid": "^9.5.20 || ^10.4.6",
-    "typo3/cms-frontend": "^9.5.20 || ^10.4.6",
+    "typo3/cms-core": "^9.5.20 || ^10.4.6 || ^11.0.0",
+    "typo3/cms-backend": "^9.5.20 || ^10.4.6 || ^11.0.0",
+    "typo3/cms-extbase": "^9.5.20 || ^10.4.6 || ^11.0.0",
+    "typo3/cms-extensionmanager": "^9.5.20 || ^10.4.6 || ^11.0.0",
+    "typo3/cms-fluid": "^9.5.20 || ^10.4.6 || ^11.0.0",
+    "typo3/cms-frontend": "^9.5.20 || ^10.4.6 || ^11.0.0",
     "auth0/auth0-php": "^7.1",
     "symfony/serializer": "^4.2 || ^5.0",
     "symfony/property-access": "^4.2 || ^5.0",
