--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   phpunit:
-    name: P${{ matrix.php-version }} - T${{ matrix.typo3-version }}
+    name: PHP ${{ matrix.php-version }} - T3 ${{ matrix.typo3-version }}
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental }}
     strategy:
@@ -59,9 +59,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: fileinfo, gd, zip, zlib, openssl, intl
+          extensions: fileinfo, gd, zip, zlib, openssl, intl, PDO, json, pcre, session, xml, filter, hash, mbstring, SPL, standard, mysqli
           ini-values: max_execution_time=240,memory_limit=256M
-          tools: composer:v2, php-cs-fixer:2.17.1
+          tools: composer:v2, php-cs-fixer:2.17.1, phpunit
 
       - name: Get composer cache directory
         id: composer-cache
