--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,4 +83,4 @@ jobs:
           export TYPO3_PATH_WEB=$PWD/.Build/web
 
       - name: Run PHP Unit
-        run: .Build/bin/phpunit --colors --configuration Tests/Build/FunctionalTests.xml Tests/Functional --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --coverage-clover=coverage.integration.clover
+        run: phpunit --colors --configuration Tests/Build/FunctionalTests.xml Tests/Functional --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --coverage-clover=coverage.integration.clover
