[WIP] GitHub Actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
 #        experimental: [false]
 #        php-version: [7.2, 7.3, 7.4]
 #        typo3-version: [^9.5, ^10.4]
-#        include:
+        include:
 #          - php-version: 7.4
 #            typo3-version: 9.5.x-dev
 #            experimental: true
