--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Bitmotion\\Auth0\\Tests\\": "Tests/"
+      "Leuchtfeuer\\Auth0\\Tests\\": "Tests/"
     }
   },
   "config": {
