--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,22 @@ on:
       - master
 
 jobs:
+  integration:
+    name: Integration tests
+    runs-on: ubuntu-latest
+    setps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup PHP Environment
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: php-cs-fixer:2.17.1
+      - name: Check PHP CS
+        run: php-cs-fixer fix --config .php_cs --using-cache false --show-progress dots -vvv
+
   phpunit:
+    needs: integration
     name: PHP ${{ matrix.php-version }} - T3 ${{ matrix.typo3-version }}
     runs-on: ubuntu-18.04
     continue-on-error: ${{ matrix.experimental }}
@@ -57,7 +72,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
           extensions: fileinfo, gd, zip, zlib, openssl, intl, PDO, json, pcre, session, xml, filter, hash, mbstring, SPL, standard, mysqli
           ini-values: max_execution_time=240,memory_limit=256M
-          tools: composer:v2, php-cs-fixer:2.17.1
+          tools: composer:v2
 
       - name: Get composer cache directory
         id: composer-cache
@@ -79,4 +94,9 @@ jobs:
           export TYPO3_PATH_WEB=$PWD/.Build/web
 
       - name: Run PHP Unit
-        run: .Build/bin/phpunit --colors --configuration Tests/Build/FunctionalTests.xml Tests/Functional --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --coverage-clover=coverage.integration.clover
+        run: |
+          .Build/bin/phpunit --colors --configuration Tests/Build/FunctionalTests.xml Tests/Functional --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --coverage-clover=coverage.xml
+
+          if [[ "${{ matrix.php-version }}" == "7.4" ]] && [[ "${{ matrix.typo3-version }}" == "^10.4"  ]]; then
+            bash <(curl -s https://codecov.io/bash)
+          fi
