--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
   integration:
     name: Integration tests
     runs-on: ubuntu-latest
-    setps:
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup PHP Environment
