--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,9 @@ jobs:
   integration:
     name: Integration tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version: [7.2, 7.3, 7.4]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -28,7 +31,6 @@ jobs:
     runs-on: ubuntu-18.04
     continue-on-error: ${{ matrix.experimental }}
     strategy:
-      fail-fast: false
       matrix:
         experimental: [false]
         php-version: [7.2, 7.3, 7.4]
