--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: php-cs-fixer:2.17.1
       - name: Check PHP CS
-        run: php-cs-fixer fix --config .php_cs --using-cache false --show-progress dots -vvv
+        run: php-cs-fixer fix --config .php_cs -v --dry-run --using-cache false --show-progress dots -vvv
 
   phpunit:
     needs: integration
