--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,9 @@ name: CI
 on:
   push:
     branches:
-      - feature/**
-  pull_request:
-    branches:
       - master
+      - '[0-9]+\-[0-9]+\-x'
+  pull_request:
 
 jobs:
   integration:
@@ -62,6 +61,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 10
 
       - uses: shogo82148/actions-setup-mysql@v1
         with:
