--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 /Build/ export-ignore
 /Documentation/ export-ignore
 /Tests/ export-ignore
+/README.md
+/LICENSE.txt
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php_cs export-ignore
