--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,8 @@
 /Build/ export-ignore
 /Documentation/ export-ignore
 /Tests/ export-ignore
-/README.md
-/LICENSE.txt
+/README.md export-ignore
+/LICENSE.txt export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php_cs export-ignore
