--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,6 @@
 /LICENSE.txt export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
+/php-cs-fixer.php export-ignore
 /.travis.yml export-ignore
 /codecov.yml export-ignore
