--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          tools: php-cs-fixer:2.17.1
+          tools: php-cs-fixer:3.0.0
       - name: Check PHP CS
-        run: php-cs-fixer fix --config .php_cs -v --dry-run --using-cache false --show-progress dots -vvv
+        run: php-cs-fixer fix --config php-cs-fixer.php -v --dry-run --using-cache false --show-progress dots -vvv
 
   phpunit:
     needs: integration
