--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: php-cs-fixer:3.0.0
       - name: Check PHP CS
-        run: php-cs-fixer fix --config php-cs-fixer.php -v --dry-run --using-cache false --show-progress dots -vvv
+        run: php-cs-fixer fix --config php-cs-fixer.php --dry-run --using-cache no --show-progress dots -vvv
 
   phpunit:
     needs: integration
