--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -1,4 +1,18 @@
 services:
+  _defaults:
+    autowire: true
+    autoconfigure: true
+    public: false
+
+  Bitmotion\Auth0\:
+    resource: '../Classes/*'
+
+  Bitmotion\Auth0\Command\CleanUpCommand:
+    tags:
+      - name: 'console.command'
+        command: 'auth0:cleanupusers'
+        description: 'Disable or remove obsolete website users.'
+
   Bitmotion\Auth0\EventListener\AfterPackageActivation:
     tags:
       - name: event.listener
