--- a/composer.json
+++ b/composer.json
@@ -63,9 +63,14 @@
   },
   "scripts": {
     "post-autoload-dump": [
-      "TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare",
-      "mkdir -p .Build/web/typo3conf/ext/",
-      "[ -L .Build/web/typo3conf/ext/auth0 ] || ln -snvf ../../../../. .Build/web/typo3conf/ext/auth0"
+      "TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
+    ],
+    "cs-fix": ".Build/bin/php-cs-fixer fix --config php-cs-fixer.php --using-cache no --show-progress dots -vvv",
+    "phpstan": ".Build/bin/phpstan analyse -l 1 Classes/ Configuration/ Resources/",
+    "functional-test": ".Build/bin/phpunit --configuration Tests/Build/FunctionalTests.xml",
+    "deploy": [
+      "@cs-fix",
+      "@functional-test"
     ]
   },
   "extra": {
@@ -74,5 +79,10 @@
       "web-dir": ".Build/web",
       "extension-key": "auth0"
     }
+  },
+  "require-dev": {
+    "typo3/testing-framework": "v6.x",
+    "friendsofphp/php-cs-fixer": "^3.2",
+    "phpstan/phpstan": "^0.12.99"
   }
 }
