--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,10 +9,10 @@ on:
 jobs:
   integration:
     name: Integration tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-version: [7.2, 7.3, 7.4]
+        php-version: [7.4, 8.0]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -20,35 +20,35 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          tools: php-cs-fixer:3.0.0
+          tools: php-cs-fixer:3.5
       - name: Check PHP CS
         run: php-cs-fixer fix --config php-cs-fixer.php --dry-run --using-cache no --show-progress dots -vvv
 
   phpunit:
     needs: integration
     name: PHP ${{ matrix.php-version }} - T3 ${{ matrix.typo3-version }}
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
         experimental: [false]
-        php-version: [7.2, 7.3, 7.4]
-        typo3-version: [^9.5, ^10.4]
+        php-version: [7.4, 8.0]
+        typo3-version: [^10.4, ^11.5]
         include:
-          - php-version: 7.4
-            typo3-version: 9.5.x-dev
-            experimental: true
-
           - php-version: 7.4
             typo3-version: 10.4.x-dev
             experimental: true
 
-          - php-version: 7.4
-            typo3-version: ^11.0
-            experimental: false
+          - php-version: 8.0
+            typo3-version: 10.4.x-dev
+            experimental: true
 
           - php-version: 7.4
-            typo3-version: dev-master
+            typo3-version: ^11.5
+            experimental: false
+
+          - php-version: 8.0
+            typo3-version: ^11.5
             experimental: true
     env:
       PHP_VERSION: ${{ matrix.php-version }}
