--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-version: [7.4, 8.0]
+        php-version: [ 7.4, 8.0 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: php-cs-fixer:3.5
       - name: Check PHP CS
-        run: php-cs-fixer fix --config php-cs-fixer.php --dry-run --using-cache no --show-progress dots -vvv
+        run: php-cs-fixer fix --config .php-cs-fixer.php --dry-run --using-cache no --show-progress dots -vvv
 
   phpunit:
     needs: integration
@@ -31,9 +31,9 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        experimental: [false]
-        php-version: [7.4, 8.0]
-        typo3-version: [^10.4, ^11.5]
+        experimental: [ false ]
+        php-version: [ 7.4, 8.0 ]
+        typo3-version: [ ^10.4, ^11.5 ]
         include:
           - php-version: 7.4
             typo3-version: 10.4.x-dev
