--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "leuchtfeuer/auth0",
     "description": "Auth0 is the solution you need for web, mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.",
+    "license": "GPL-2.0-or-later",
+    "type": "typo3-cms-extension",
     "keywords": [
         "TYPO3",
         "Auth0",
@@ -8,61 +10,60 @@
         "Login",
         "User"
     ],
-    "type": "typo3-cms-extension",
-    "license": "GPL-2.0-or-later",
-    "homepage": "https://www.Leuchtfeuer.com",
     "authors": [
         {
             "name": "Florian Wessels",
             "email": "flo.wessels@gmail.com",
-            "role": "Developer",
-            "homepage": "https://www.Leuchtfeuer.com"
+            "homepage": "https://www.Leuchtfeuer.com",
+            "role": "Developer"
         },
         {
             "name": "Max Rösch",
             "email": "m.roesch@Leuchtfeuer.com",
-            "role": "Developer",
-            "homepage": "https://www.Leuchtfeuer.com"
+            "homepage": "https://www.Leuchtfeuer.com",
+            "role": "Developer"
         }
     ],
+    "homepage": "https://www.Leuchtfeuer.com",
     "require": {
-        "auth0/auth0-php": "^8.0",
         "php": ">=7.4",
+        "auth0/auth0-php": "^8.1",
+        "lcobucci/jwt": "^4.1",
         "symfony/http-foundation": "^5.4",
         "symfony/property-access": "^4.4 || ^5.4",
         "symfony/property-info": "^5.0",
         "symfony/serializer": "^4.4 || ^5.4",
-        "typo3/cms-backend": "^10.4.24 || ^11.5.6",
-        "typo3/cms-core": "^10.4.24 || ^11.5.6",
-        "typo3/cms-extbase": "^10.4.24 || ^11.5.6",
-        "typo3/cms-extensionmanager": "^10.4.24 || ^11.5.6",
-        "typo3/cms-fluid": "^10.4.24 || ^11.5.6",
-        "typo3/cms-frontend": "^10.4.24 || ^11.5.6",
-        "lcobucci/jwt": "^4.1"
-    },
-    "suggest": {
-        "typo3/cms-scheduler": "TYPO3 Scheduler"
+        "typo3/cms-backend": "^10.4.25 || ^11.5.7",
+        "typo3/cms-core": "^10.4.25 || ^11.5.7",
+        "typo3/cms-extbase": "^10.4.25 || ^11.5.7",
+        "typo3/cms-extensionmanager": "^10.4.25 || ^11.5.7",
+        "typo3/cms-fluid": "^10.4.25 || ^11.5.7",
+        "typo3/cms-frontend": "^10.4.25 || ^11.5.7"
     },
     "replace": {
         "bitmotion/auth0": "self.version",
         "typo3-ter/auth0": "self.version"
+    },
+    "suggest": {
+        "typo3/cms-scheduler": "TYPO3 Scheduler"
     },
     "autoload": {
         "psr-4": {
             "Bitmotion\\Auth0\\": "Classes/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Leuchtfeuer\\Auth0\\Tests\\": "Tests/"
-        }
-    },
     "config": {
-        "vendor-dir": ".Build/vendor",
-        "bin-dir": ".Build/bin",
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
             "typo3/class-alias-loader": true
+        },
+        "bin-dir": ".Build/bin",
+        "vendor-dir": ".Build/vendor"
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "auth0",
+            "web-dir": ".Build/web"
         }
     },
     "scripts": {
@@ -71,11 +72,5 @@
             "mkdir -p .Build/web/typo3conf/ext/",
             "[ -L .Build/web/typo3conf/ext/auth0 ] || ln -snvf ../../../../. .Build/web/typo3conf/ext/auth0"
         ]
-    },
-    "extra": {
-        "typo3/cms": {
-            "web-dir": ".Build/web",
-            "extension-key": "auth0"
-        }
     }
 }
