--- a/Libraries/composer.json
+++ b/Libraries/composer.json
@@ -1,14 +1,15 @@
 {
-  "config": {
-    "platform": {
-      "php": "7.2.0"
-    },
-    "classmap-authoritative": true
-  },
   "require": {
-    "auth0/auth0-php": "^7.1",
-    "symfony/serializer": "^4.2",
-    "symfony/property-access": "^4.4",
-    "symfony/property-info": "^4.4"
+    "auth0/auth0-php": "^8.1",
+    "guzzlehttp/guzzle": "^7.4",
+    "symfony/property-access": "^4.2",
+    "symfony/property-info": "^4.2",
+    "symfony/serializer": "^4.2"
+  },
+  "config": {
+    "classmap-authoritative": true,
+    "platform": {
+      "php": "7.4.0"
+    }
   }
 }
