--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,6 @@
     ],
     "homepage": "https://www.Leuchtfeuer.com",
     "require": {
-        "php": ">=7.4",
         "auth0/auth0-php": "^8.1",
         "lcobucci/jwt": "^4.1",
         "symfony/http-foundation": "^5.4",
@@ -58,6 +57,9 @@
             "typo3/class-alias-loader": true
         },
         "bin-dir": ".Build/bin",
+        "platform": {
+            "php": "7.4"
+        },
         "vendor-dir": ".Build/vendor"
     },
     "extra": {
