--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "typo3/cms-frontend": "^10.4.25 || ^11.5.7"
     },
     "replace": {
-        "leuchtfeuer/auth0": "self.version",
+        "bitmotion/auth0": "self.version",
         "typo3-ter/auth0": "self.version"
     },
     "suggest": {
