--- a/Libraries/composer.json
+++ b/Libraries/composer.json
@@ -1,10 +1,12 @@
 {
   "require": {
     "auth0/auth0-php": "^8.1",
-    "guzzlehttp/guzzle": "^7.4",
-    "symfony/property-access": "^4.2",
-    "symfony/property-info": "^4.2",
-    "symfony/serializer": "^4.2"
+    "lcobucci/jwt": "^4.1",
+    "symfony/property-access": "^4.4 || ^5.4",
+    "symfony/property-info": "^5.0",
+    "symfony/serializer": "^4.4 || ^5.4",
+    "symfony/http-client": "^5.4",
+    "nyholm/psr7": "^1.8"
   },
   "config": {
     "classmap-authoritative": true,
