--- a/composer.json
+++ b/composer.json
@@ -22,22 +22,28 @@
             "email": "m.roesch@Leuchtfeuer.com",
             "homepage": "https://www.Leuchtfeuer.com",
             "role": "Developer"
+        },
+        {
+            "name": "Yassine Abid",
+            "email": "y.abid@Leuchtfeuer.com",
+            "homepage": "https://www.Leuchtfeuer.com",
+            "role": "Developer"
         }
     ],
     "homepage": "https://www.Leuchtfeuer.com",
     "require": {
         "auth0/auth0-php": "^8.1",
         "lcobucci/jwt": "^4.1",
-        "symfony/http-foundation": "^5.4",
-        "symfony/property-access": "^4.4 || ^5.4",
-        "symfony/property-info": "^5.0",
-        "symfony/serializer": "^4.4 || ^5.4",
-        "typo3/cms-backend": "^10.4.25 || ^11.5.7",
-        "typo3/cms-core": "^10.4.25 || ^11.5.7",
-        "typo3/cms-extbase": "^10.4.25 || ^11.5.7",
-        "typo3/cms-extensionmanager": "^10.4.25 || ^11.5.7",
-        "typo3/cms-fluid": "^10.4.25 || ^11.5.7",
-        "typo3/cms-frontend": "^10.4.25 || ^11.5.7"
+        "symfony/http-foundation": "^5.4 || ^6.2",
+        "symfony/property-access": "^4.4 || ^5.4 || ^6.2",
+        "symfony/property-info": "^5.4 || ^6.3",
+        "symfony/serializer": "^4.4 || ^5.4 || ^6.2",
+        "typo3/cms-backend": "^11.5.7 || ^12.4",
+        "typo3/cms-core": "^11.5.7 || ^12.4",
+        "typo3/cms-extbase": "^11.5.7 || ^12.4",
+        "typo3/cms-extensionmanager": "^11.5.7 || ^12.4",
+        "typo3/cms-fluid": "^11.5.7 || ^12.4",
+        "typo3/cms-frontend": "^11.5.7 || ^12.4"
     },
     "replace": {
         "bitmotion/auth0": "self.version",
@@ -48,7 +54,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Bitmotion\\Auth0\\": "Classes/"
+            "Leuchtfeuer\\Auth0\\": "Classes/"
         }
     },
     "config": {
@@ -77,6 +83,7 @@
         ]
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.14"
+        "ssch/typo3-rector": "^1.3",
+        "friendsofphp/php-cs-fixer": "^3.25"
     }
 }
