--- a/Libraries/composer.json
+++ b/Libraries/composer.json
@@ -2,11 +2,10 @@
   "require": {
     "auth0/auth0-php": "^8.1",
     "lcobucci/jwt": "^4.1",
-    "symfony/property-access": "^4.4 || ^5.4",
-    "symfony/property-info": "^5.0",
-    "symfony/serializer": "^4.4 || ^5.4",
-    "symfony/http-client": "^5.4",
-    "nyholm/psr7": "^1.8"
+    "symfony/http-foundation": "^5.4 || ^6.2",
+    "symfony/property-access": "^4.4 || ^5.4 || ^6.2",
+    "symfony/property-info": "^5.4 || ^6.3",
+    "symfony/serializer": "^4.4 || ^5.4 || ^6.2"
   },
   "config": {
     "classmap-authoritative": true,
